--- a/index.html
+++ b/index.html
@@ -4,40 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display&family=Lexend+Deca&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <link rel="stylesheet" href="index.css">
+  <title>3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<p></p>
-<body>
+<body class="body">
   <div class="sedans">
-    <p class="animate__wobble">h3.sedans__</p>
-    Sedans
-    Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-    or on your next road trip.
+    <div>
+      <img src="/images/icon-sedans.svg" alt="Icono de sedan">
+    </div>
+    <h3 class="sedans_title">SEDANS</h3>
+    <p class="sedans_p">
+      Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+      or on your next road trip.
+    </p>
+    <p class="sedanslearn learn">Learn more</p>
   </div>
   <div class="suv">
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <div>
+      <img src="/images/icon-suvs.svg" alt="Icono de SUV">
+    </div>
+    <h3 class="suv_title">SUVS</h3>
+    <p class="suv_p">
+      Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+      and off-road adventures.
+    </p>
+    <p class="suvlearn learn">Learn more</p>
   </div>
   <div class="lixury">
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div>
+      <img src="/images/icon-luxury.svg" alt="Icono de Luxury">
+    </div>
+    <h3 class="lixury_title"> LUXURY</h3>
+    <p class="lixury_p">  
+      Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+      rental and arrive in style.
+    </p>
+    <p class="lixurylearn learn">Learn more</p>
   </div>
 </body>
 </html>
